pass bucket branch to child pipeline

--- a/.gitlab/trigger_distribution/trigger_distribution.yml
+++ b/.gitlab/trigger_distribution/trigger_distribution.yml
@@ -3,6 +3,9 @@
 trigger_distribution:
   stage: trigger_distribution
   rules: !reference [.on_deploy_success]
+  variables:
+    PARENT_PIPELINE_ID: $CI_PIPELINE_ID
+    BUCKET_BRANCH: $BUCKET_BRANCH
   trigger:
     include:
       - local: .gitlab/trigger_distribution/include.yml
@@ -11,6 +14,9 @@ trigger_distribution_on_failure:
   stage: trigger_distribution
   needs: []
   rules: !reference [.on_deploy_manual]
+  variables:
+    PARENT_PIPELINE_ID: $CI_PIPELINE_ID
+    BUCKET_BRANCH: $BUCKET_BRANCH
   trigger:
     include:
       - local: .gitlab/trigger_distribution/include.yml
