--- a/.gitlab/packaging/rpm.yml
+++ b/.gitlab/packaging/rpm.yml
@@ -123,7 +123,7 @@ ddot_rpm-x64:
   needs: ["datadog-otel-agent-x64"]
   variables:
     DD_PROJECT: ddot
-    PACKAGE_REQUIRED_FILES_LIST: ""
+    PACKAGE_REQUIRED_FILES_LIST: "test/required_files/ddot.txt"
     # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
     DD_DISABLE_VPA: true
 
@@ -132,7 +132,7 @@ ddot_rpm-arm64:
   needs: ["datadog-otel-agent-arm64"]
   variables:
     DD_PROJECT: ddot
-    PACKAGE_REQUIRED_FILES_LIST: ""
+    PACKAGE_REQUIRED_FILES_LIST: "test/required_files/ddot.txt"
     # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
     DD_DISABLE_VPA: true
 
@@ -141,7 +141,7 @@ ddot_suse_rpm-x64:
   needs: ["datadog-otel-agent-x64"]
   variables:
     DD_PROJECT: ddot
-    PACKAGE_REQUIRED_FILES_LIST: ""
+    PACKAGE_REQUIRED_FILES_LIST: "test/required_files/ddot.txt"
     # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
     DD_DISABLE_VPA: true
 
@@ -150,7 +150,7 @@ ddot_suse_rpm-arm64:
   needs: ["datadog-otel-agent-arm64"]
   variables:
     DD_PROJECT: ddot
-    PACKAGE_REQUIRED_FILES_LIST: ""
+    PACKAGE_REQUIRED_FILES_LIST: "test/required_files/ddot.txt"
     # TODO(agent-devx): Re-enable VPA by removing this when it will be possible to configure memory lower bound to avoid OOMs
     DD_DISABLE_VPA: true
 
