fix: use team-reviewers to request review from team

--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -65,5 +65,5 @@ jobs:
 
             ### Describe how you validated your changes
             CI is considered enough to validate changes.
-          reviewers: DataDog/agent-runtimes
+          team-reviewers: agent-runtimes
           labels: team/agent-runtimes,qa/done,changelog/no-changelog,ask-review
