--- a/modules.yml
+++ b/modules.yml
@@ -124,6 +124,10 @@ modules:
     independent: false
     should_tag: false
     should_test_condition: never
+  internal/tools/gotest-custom:
+    independent: false
+    should_tag: false
+    should_test_condition: never
   internal/tools/independent-lint:
     independent: false
     should_tag: false
