--- a/.gitlab/e2e/e2e.yml
+++ b/.gitlab/e2e/e2e.yml
@@ -73,7 +73,8 @@
     E2E_RESULT_JSON: $CI_PROJECT_DIR/e2e_test_output.json
     E2E_USE_AWS_PROFILE: "true"
   script:
-    - dda inv -- -e new-e2e-tests.run --local-package $CI_PROJECT_DIR/$OMNIBUS_BASE_DIR --result-json $E2E_RESULT_JSON --targets $TARGETS -c ddagent:imagePullRegistry=669783387624.dkr.ecr.us-east-1.amazonaws.com -c ddagent:imagePullUsername=AWS -c ddagent:imagePullPassword=$(aws ecr get-login-password) --junit-tar junit-${CI_JOB_ID}.tgz ${EXTRA_PARAMS} --test-washer --logs-folder=$E2E_OUTPUT_DIR/logs --logs-post-processing --logs-post-processing-test-depth=$E2E_LOGS_PROCESSING_TEST_DEPTH
+    - tar -xvzf test-binaries.tar.gz
+    - dda inv -- -e new-e2e-tests.run --use-prebuilt-binaries --local-package $CI_PROJECT_DIR/$OMNIBUS_BASE_DIR --result-json $E2E_RESULT_JSON --targets $TARGETS -c ddagent:imagePullRegistry=669783387624.dkr.ecr.us-east-1.amazonaws.com -c ddagent:imagePullUsername=AWS -c ddagent:imagePullPassword=$(aws ecr get-login-password) --junit-tar junit-${CI_JOB_ID}.tgz ${EXTRA_PARAMS} --test-washer --logs-folder=$E2E_OUTPUT_DIR/logs --logs-post-processing --logs-post-processing-test-depth=$E2E_LOGS_PROCESSING_TEST_DEPTH
   after_script:
     - $CI_PROJECT_DIR/tools/ci/junit_upload.sh "junit-${CI_JOB_ID}.tgz" "$E2E_RESULT_JSON"
   artifacts:
@@ -92,6 +93,35 @@
 
 .needs_new_e2e_template:
   - go_e2e_deps
+  - go_e2e_test_binaries
+
+# Build test binaries job that creates pre-compiled test binaries
+# This job runs early in the pipeline and creates artifacts that can be reused by test jobs
+go_e2e_test_binaries:
+  stage: binary_build
+  image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$CI_IMAGE_DEB_X64_SUFFIX:$CI_IMAGE_DEB_X64
+  tags: ["arch:amd64"]
+  needs:
+    - go_e2e_deps
+  variables:
+    KUBERNETES_CPU_REQUEST: 8
+    KUBERNETES_MEMORY_REQUEST: 64Gi
+    KUBERNETES_MEMORY_LIMIT: 64Gi
+  before_script:
+    - !reference [.retrieve_linux_go_e2e_deps]
+  script:
+    - dda inv -- -e new-e2e-tests.build-binaries --output-dir test-binaries -p $KUBERNETES_CPU_REQUEST --manifest-file-path manifest.json
+    - tar czf test-binaries.tar.gz test-binaries
+  artifacts:
+    expire_in: 1 day
+    paths:
+      - test-binaries.tar.gz
+      - manifest.json
+  rules:
+    - !reference [.except_mergequeue]
+    - when: on_success
+
+
 
 .new_e2e_template_needs_windows_x64:
   extends: .new_e2e_template
@@ -191,8 +221,7 @@ new-e2e-remote-config:
   variables:
     TARGETS: ./tests/remote-config
     TEAM: remote-config
-    # Temporarily disable the test on FIPS pipeline, as remote-configuration is not available with FIPS Agent yet
-    # ON_NIGHTLY_FIPS: "true"
+    # TODO: Re-enable on fips pipeline when fips is available with remote config using: ON_NIGHTLY_FIPS: "true"
 
 new-e2e-agent-configuration:
   extends: .new_e2e_template_needs_deb_windows_x64
@@ -289,19 +318,6 @@ new-e2e-windows-service-test:
       - EXTRA_PARAMS: --run TestServiceBehaviorWhenDisabledProcessAgent
       - EXTRA_PARAMS: --run TestServiceBehaviorWhenDisabledTraceAgent
       - EXTRA_PARAMS: --run TestServiceBehaviorWhenDisabledInstaller
-
-new-e2e-windows-certificate:
-  extends: .new_e2e_template
-  rules:
-    - !reference [.on_windows_certificate_or_e2e_changes]
-    - !reference [.manual]
-  needs:
-    - !reference [.needs_new_e2e_template]
-    - deploy_windows_testing-a7
-  variables:
-    TARGETS: ./tests/windows/windows-certificate
-    TEAM: windows-agent
-    EXTRA_PARAMS: --run "TestRemoteCertificates$"
 
 new-e2e-language-detection:
   extends: .new_e2e_template_needs_deb_x64
@@ -441,8 +457,7 @@ new-e2e-cws:
   variables:
     TARGETS: ./tests/cws
     TEAM: csm-threats-agent
-    # Temporarily disable the test on FIPS pipeline, as remote-configuration is not available with FIPS Agent yet
-    # ON_NIGHTLY_FIPS: "true"
+    ON_NIGHTLY_FIPS: "true"
   parallel:
     matrix:
       - EXTRA_PARAMS: --run TestAgentSuite
@@ -507,8 +522,7 @@ new-e2e-apm:
   variables:
     TARGETS: ./tests/apm
     TEAM: apm-agent
-    # Temporarily disable the test on FIPS pipeline, as remote-configuration is not available with FIPS Agent yet
-    # ON_NIGHTLY_FIPS: "true"
+    # TODO: Re-enable on fips pipeline when this test does not rely on remote-configuration: ON_NIGHTLY_FIPS: "true"
   parallel:
     matrix:
       - EXTRA_PARAMS: --run TestDockerFakeintakeSuiteUDS
@@ -613,8 +627,6 @@ new-e2e-installer-windows:
       - EXTRA_PARAMS: --run "TestAgentConfig$/TestConfigUpgradeSuccessful$"
       - EXTRA_PARAMS: --run "TestAgentConfig$/TestConfigUpgradeFailure$"
       - EXTRA_PARAMS: --run "TestAgentConfig$/TestConfigUpgradeNewAgents$"
-      - EXTRA_PARAMS: --run "TestAgentConfig$/TestRevertsConfigExperimentWhenServiceDies$"
-      - EXTRA_PARAMS: --run "TestAgentConfig$/TestRevertsConfigExperimentWhenTimeout$"
       # install-exe
       - EXTRA_PARAMS: --run "TestInstallExe$/TestInstallAgentPackage$"
       # install-script
@@ -696,8 +708,7 @@ new-e2e-ha-agent:
   variables:
     TARGETS: ./tests/ha-agent
     TEAM: ndm-core
-    # Temporarily disable the test on FIPS pipeline, as remote-configuration is not available with FIPS Agent yet
-    # ON_NIGHTLY_FIPS: "true"
+    ON_NIGHTLY_FIPS: "true"
     EXTRA_PARAMS: --skip TestHAAgentFailoverSuite
 
 new-e2e-ha-agent-failover:
