--- a/.gitlab/deploy_dca/deploy_dca_trigger.yml
+++ b/.gitlab/deploy_dca/deploy_dca_trigger.yml
@@ -1,6 +1,7 @@
 ---
 include:
   - .gitlab/common/container_publish_job_templates.yml
+  - .gitlab/deploy_containers/conditions.yml
 
 stages:
   - deploy_dca
@@ -36,11 +37,11 @@ stages:
 
 deploy_containers-dca:
   extends: .deploy_containers-dca-base
-  rules: !reference [.on_deploy_manual_auto_on_rc]
+  rules: !reference [.manual_on_deploy_auto_on_rc]
 
 deploy_containers-dca-rc:
   extends: .deploy_mutable_dca_tags-base
-  rules: !reference [.on_deploy_rc]
+  rules: !reference [.on_rc]
   needs:
     - job: deploy_containers-dca
       artifacts: false
@@ -49,7 +50,7 @@ deploy_containers-dca-rc:
 
 deploy_containers-dca-latest:
   extends: .deploy_mutable_dca_tags-base
-  rules: !reference [.on_deploy_manual_final]
+  rules: !reference [.on_final]
   needs:
     - job: deploy_containers-dca
       artifacts: false
@@ -58,11 +59,11 @@ deploy_containers-dca-latest:
 
 deploy_containers-dca_internal:
   extends: .deploy_containers-dca-base
-  rules: !reference [.on_deploy_internal_manual_final]
+  rules: !reference [.on_internal_final]
 
 deploy_containers-dca_internal-rc:
   extends: .deploy_mutable_dca_tags-base
-  rules: !reference [.on_deploy_internal_rc]
+  rules: !reference [.on_internal_rc]
   needs:
     - job: deploy_containers-dca_internal
       artifacts: false
@@ -71,7 +72,7 @@ deploy_containers-dca_internal-rc:
 
 deploy_containers-dca_internal-latest:
   extends: .deploy_mutable_dca_tags-base
-  rules: !reference [.on_deploy_internal_manual_final]
+  rules: !reference [.on_internal_final]
   needs:
     - job: deploy_containers-dca_internal
       artifacts: false
@@ -104,11 +105,11 @@ deploy_containers-dca_internal-latest:
 
 deploy_containers-dca-fips:
   extends: .deploy_containers-dca-fips-base
-  rules: !reference [.on_deploy_manual_auto_on_rc]
+  rules: !reference [.manual_on_deploy_auto_on_rc]
 
 deploy_containers-dca-fips-latest:
   extends: .deploy_mutable_dca_tags-fips-base
-  rules: !reference [.on_deploy_manual_final]
+  rules: !reference [.on_final]
   needs:
     - job: deploy_containers-dca-fips
       artifacts: false
@@ -117,7 +118,7 @@ deploy_containers-dca-fips-latest:
 
 deploy_containers-dca-fips-rc:
   extends: .deploy_mutable_dca_tags-fips-base
-  rules: !reference [.on_deploy_rc]
+  rules: !reference [.on_rc]
   needs:
     - job: deploy_containers-dca-fips
       artifacts: false
@@ -126,11 +127,11 @@ deploy_containers-dca-fips-rc:
 
 deploy_containers-dca-fips_internal:
   extends: .deploy_containers-dca-fips-base
-  rules: !reference [.on_deploy_internal_manual_final]
+  rules: !reference [.on_internal_final]
 
 deploy_containers-dca-fips_internal-rc:
   extends: .deploy_mutable_dca_tags-fips-base
-  rules: !reference [.on_deploy_internal_rc]
+  rules: !reference [.on_internal_rc]
   needs:
     - job: deploy_containers-dca-fips_internal
       artifacts: false
@@ -139,7 +140,7 @@ deploy_containers-dca-fips_internal-rc:
 
 deploy_containers-dca-fips_internal-latest:
   extends: .deploy_mutable_dca_tags-fips-base
-  rules: !reference [.on_deploy_internal_manual_final]
+  rules: !reference [.on_internal_final]
   needs:
     - job: deploy_containers-dca-fips_internal
       artifacts: false
