Forced core agent to be enabled always when converter is

--- a/comp/otelcol/converter/impl/testdata/features/prometheus-only/config-result.yaml
+++ b/comp/otelcol/converter/impl/testdata/features/prometheus-only/config-result.yaml
@@ -17,6 +17,7 @@ exporters:
     datadog:
       api:
         key: abcde12345
+        site: datadoghq.com
 
 extensions:
   pprof/user-defined:
@@ -24,7 +25,7 @@ extensions:
   zpages/user-defined:
     endpoint: "localhost:55679"
   ddflare/user-defined:
-    
+
 processors:
   infraattributes/user-defined:
 
