Automatically add mock coreConfig files to all tests, fixed tests with issues

--- a/comp/otelcol/converter/impl/testdata/processors/dd-connector-multi-pipelines/config-result.yaml
+++ b/comp/otelcol/converter/impl/testdata/processors/dd-connector-multi-pipelines/config-result.yaml
@@ -11,6 +11,7 @@ exporters:
   datadog:
     api:
       key: "0000"
+      site: "datadoghq.com"
 processors:
   infraattributes/dd-autoconfigured:
   batch:
