--- a/comp/otelcol/converter/impl/testdata/processors/no-processor-partial/config-result.yaml
+++ b/comp/otelcol/converter/impl/testdata/processors/no-processor-partial/config-result.yaml
@@ -5,6 +5,7 @@ exporters:
     datadog:
       api:
         key: abcde12345
+        site: "datadoghq.com"
 
 processors:
     k8sattributes:
@@ -17,7 +18,7 @@ extensions:
   zpages/user-defined:
     endpoint: "localhost:55679"
   ddflare/user-defined:
-    
+
 service:
     telemetry:
       metrics:
