--- a/comp/otelcol/converter/impl/testdata/receivers/multi-dd-partial-prom/config-result.yaml
+++ b/comp/otelcol/converter/impl/testdata/receivers/multi-dd-partial-prom/config-result.yaml
@@ -28,12 +28,15 @@ exporters:
     datadog/1:
       api:
         key: abcde12345
+        site: "datadoghq.com"
     datadog/2:
       api:
         key: abcde12345
+        site: "datadoghq.com"
     datadog/3:
       api:
         key: abcde12345
+        site: "datadoghq.com"
 
 extensions:
   pprof/user-defined:
@@ -41,7 +44,7 @@ extensions:
   zpages/user-defined:
     endpoint: "localhost:55679"
   ddflare/user-defined:
-    
+
 processors:
   infraattributes/user-defined:
 
