--- a/comp/otelcol/converter/impl/testdata/processors/no-processors/config-result.yaml
+++ b/comp/otelcol/converter/impl/testdata/processors/no-processors/config-result.yaml
@@ -5,6 +5,7 @@ exporters:
     datadog:
       api:
         key: abcde12345
+        site: "datadoghq.com"
 
 extensions:
   pprof/user-defined:
@@ -12,7 +13,7 @@ extensions:
   zpages/user-defined:
     endpoint: "localhost:55679"
   ddflare/user-defined:
-    
+
 processors:
   infraattributes/dd-autoconfigured:
 
