--- a/comp/otelcol/converter/impl/testdata/receivers/empty-staticconfigs/config-result.yaml
+++ b/comp/otelcol/converter/impl/testdata/receivers/empty-staticconfigs/config-result.yaml
@@ -26,6 +26,7 @@ exporters:
     datadog:
       api:
         key: abcde12345
+        site: "datadoghq.com"
 
 extensions:
   pprof/user-defined:
@@ -33,7 +34,7 @@ extensions:
   zpages/user-defined:
     endpoint: "localhost:55679"
   ddflare/user-defined:
-    
+
 processors:
   infraattributes/user-defined:
 
