--- a/comp/otelcol/converter/impl/testdata/receivers/no-changes-multiple-dd/config.yaml
+++ b/comp/otelcol/converter/impl/testdata/receivers/no-changes-multiple-dd/config.yaml
@@ -17,9 +17,11 @@ exporters:
     datadog:
       api:
         key: abcde12345
+        site: "datadoghq.com"
     datadog/2:
       api:
         key: abcde12345
+        site: "datadoghq.com"
 
 extensions:
   pprof/user-defined:
@@ -27,7 +29,7 @@ extensions:
   zpages/user-defined:
     endpoint: "localhost:55679"
   ddflare/user-defined:
-    
+
 processors:
   infraattributes/user-defined:
 
