--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1278,15 +1278,35 @@ test_api:
   stage: source_test
   needs: []
   script:
-    - which ddtool || true
-    - which curl || true
-    - which http || true
+    - |
+      set -e
+      if [ $(uname -m) = x86_64 ]; then
+        AAA="amd64";
+      else
+        AAA="arm64";
+      fi;
+      curl -OL "binaries.ddbuild.io/dd-source/authanywhere/LATEST/authanywhere-linux-${AAA}"
+      mv "authanywhere-linux-${AAA}" /bin/authanywhere
+      chmod +x /bin/authanywhere
 
-    - curl https://agent-ci-api.us1.staging.dog/internal/agent-ci-api -w "%{http_code}\n" || true
-    - curl https://agent-ci-api.us1.staging.dog/internal/agent-ci-api/hello -w "%{http_code}\n" || true
-    - curl https://agent-ci-api.us1.staging.dog/hello -w "%{http_code}\n" || true
+    - curl https://agent-ci-api.us1.staging.dog/internal/agent-ci-api -w "%{http_code}\n" -H "$(authanywhere)" || true
+    - curl https://agent-ci-api.us1.staging.dog/internal/agent-ci-api/hello -w "%{http_code}\n" -H "$(authanywhere)" || true
+    - curl https://agent-ci-api.us1.staging.dog/hello -w "%{http_code}\n" -H "$(authanywhere)" || true
+    - echo
 
-    - curl https://agent-ci-api.us1.staging.dog/internal/agent-ci-api -w "%{http_code}\n" -H "$(ddtool auth token rapid-agent-devx --datacenter us1.staging.dog --http-header)" || true
-    - curl https://agent-ci-api.us1.staging.dog/internal/agent-ci-api/hello -w "%{http_code}\n" -H "$(ddtool auth token rapid-agent-devx --datacenter us1.staging.dog --http-header)" || true
-    - curl https://agent-ci-api.us1.staging.dog/hello -w "%{http_code}\n" -H "$(ddtool auth token rapid-agent-devx --datacenter us1.staging.dog --http-header)" || true
+    - curl https://agent-ci-api.us1.ddbuild.io/internal/agent-ci-api -w "%{http_code}\n" -H "$(authanywhere)" || true
+    - curl https://agent-ci-api.us1.ddbuild.io/internal/agent-ci-api/hello -w "%{http_code}\n" -H "$(authanywhere)" || true
+    - curl https://agent-ci-api.us1.ddbuild.io/hello -w "%{http_code}\n" -H "$(authanywhere)" || true
+
+    # - which ddtool || true
+    # - which curl || true
+    # - which http || true
+
+    # - curl https://agent-ci-api.us1.staging.dog/internal/agent-ci-api -w "%{http_code}\n" || true
+    # - curl https://agent-ci-api.us1.staging.dog/internal/agent-ci-api/hello -w "%{http_code}\n" || true
+    # - curl https://agent-ci-api.us1.staging.dog/hello -w "%{http_code}\n" || true
+
+    # - curl https://agent-ci-api.us1.staging.dog/internal/agent-ci-api -w "%{http_code}\n" -H "$(ddtool auth token rapid-agent-devx --datacenter us1.staging.dog --http-header)" || true
+    # - curl https://agent-ci-api.us1.staging.dog/internal/agent-ci-api/hello -w "%{http_code}\n" -H "$(ddtool auth token rapid-agent-devx --datacenter us1.staging.dog --http-header)" || true
+    # - curl https://agent-ci-api.us1.staging.dog/hello -w "%{http_code}\n" -H "$(ddtool auth token rapid-agent-devx --datacenter us1.staging.dog --http-header)" || true
 
