--- a/pkg/dyninst/irgen/testdata/snapshot/simple.arch=arm64,toolchain=go1.24.3.yaml
+++ b/pkg/dyninst/irgen/testdata/snapshot/simple.arch=arm64,toolchain=go1.24.3.yaml
@@ -126,7 +126,7 @@ Subprograms:
           Type: 1 BaseType int
           Locations:
             - Range: 0xb5220..0xb5240
-              Pieces: [{Size: 8, InReg: true, StackOffset: 0, Register: 0}]
+              Pieces: [{Size: 8, Op: {RegNo: 0, Shift: 0}}]
           IsParameter: true
           IsReturn: false
     - ID: 3
@@ -140,13 +140,9 @@ Subprograms:
             - Range: 0xb5290..0xb52b4
               Pieces:
                 - Size: 8
-                  InReg: true
-                  StackOffset: 0
-                  Register: 0
+                  Op: {RegNo: 0, Shift: 0}
                 - Size: 8
-                  InReg: true
-                  StackOffset: 0
-                  Register: 1
+                  Op: {RegNo: 1, Shift: 0}
           IsParameter: true
           IsReturn: false
     - ID: 4
@@ -160,17 +156,11 @@ Subprograms:
             - Range: 0xb5310..0xb5334
               Pieces:
                 - Size: 8
-                  InReg: true
-                  StackOffset: 0
-                  Register: 0
+                  Op: {RegNo: 0, Shift: 0}
                 - Size: 8
-                  InReg: true
-                  StackOffset: 0
-                  Register: 1
+                  Op: {RegNo: 1, Shift: 0}
                 - Size: 8
-                  InReg: true
-                  StackOffset: 0
-                  Register: 2
+                  Op: {RegNo: 2, Shift: 0}
           IsParameter: true
           IsReturn: false
     - ID: 5
@@ -182,7 +172,7 @@ Subprograms:
           Type: 7 ArrayType [3]int
           Locations:
             - Range: 0xb5390..0xb5410
-              Pieces: [{Size: 24, InReg: false, StackOffset: 8, Register: 0}]
+              Pieces: [{Size: 24, Op: {CfaOffset: 8}}]
           IsParameter: true
           IsReturn: false
     - ID: 6
@@ -196,17 +186,11 @@ Subprograms:
             - Range: 0xb5410..0xb5434
               Pieces:
                 - Size: 8
-                  InReg: true
-                  StackOffset: 0
-                  Register: 0
+                  Op: {RegNo: 0, Shift: 0}
                 - Size: 8
-                  InReg: true
-                  StackOffset: 0
-                  Register: 1
+                  Op: {RegNo: 1, Shift: 0}
                 - Size: 8
-                  InReg: true
-                  StackOffset: 0
-                  Register: 2
+                  Op: {RegNo: 2, Shift: 0}
           IsParameter: true
           IsReturn: false
     - ID: 7
@@ -218,7 +202,7 @@ Subprograms:
           Type: 10 ArrayType [3]string
           Locations:
             - Range: 0xb5490..0xb5510
-              Pieces: [{Size: 48, InReg: false, StackOffset: 8, Register: 0}]
+              Pieces: [{Size: 48, Op: {CfaOffset: 8}}]
           IsParameter: true
           IsReturn: false
     - ID: 8
@@ -230,7 +214,7 @@ Subprograms:
           Type: 10 ArrayType [3]string
           Locations:
             - Range: 0xb5510..0xb5520
-              Pieces: [{Size: 48, InReg: false, StackOffset: 8, Register: 0}]
+              Pieces: [{Size: 48, Op: {CfaOffset: 8}}]
           IsParameter: true
           IsReturn: false
     - ID: 1
@@ -244,7 +228,7 @@ Subprograms:
             - Range: 0xb4fec..0xb5028
               Pieces: []
             - Range: 0xb5520..0xb5540
-              Pieces: [{Size: 8, InReg: true, StackOffset: 0, Register: 0}]
+              Pieces: [{Size: 8, Op: {RegNo: 0, Shift: 0}}]
           IsParameter: true
           IsReturn: false
 Types:
