--- a/pkg/dyninst/actuator/testdata/snapshot/attaching_failure_while_detaching.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/attaching_failure_while_detaching.yaml
@@ -5,7 +5,7 @@
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/test}
       probes:
-        - {type: LOG_PROBE, id: probe1, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe1, where: {method_name: main}, capture_snapshot: true}
 - !compiled {program_id: 1}
 - !loaded {program_id: 1}
 - !processes-updated
@@ -13,7 +13,7 @@
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/test}
       probes:
-        - {type: LOG_PROBE, id: probe1, version: 2, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe1, version: 2, where: {method_name: main}, capture_snapshot: true}
 - !attaching-failed {program_id: 1, process_id: 1001, err: "boom"}
 ---
 event: !processes-updated
@@ -21,7 +21,7 @@ event: !processes-updated
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/test}
       probes:
-        - {type: LOG_PROBE, id: probe1, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe1, where: {method_name: main}, capture_snapshot: true}
 effects:
   - !spawn-ebpf-compilation {executable: /usr/bin/test@0.0m0.0, probes: [probe1], program_id: 1}
 state:
@@ -60,7 +60,7 @@ event: !processes-updated
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/test}
       probes:
-        - {type: LOG_PROBE, id: probe1, version: 2, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe1, version: 2, where: {method_name: main}, capture_snapshot: true}
 state:
   currently_compiling: <nil>
   queued_programs: '[]'
