--- a/pkg/dyninst/actuator/testdata/snapshot/multiple_programs_queued.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/multiple_programs_queued.yaml
@@ -5,22 +5,22 @@
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/app1}
       probes:
-        - {type: LOG_PROBE, id: probe1, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe1, where: {method_name: main}, capture_snapshot: true}
     - process_id: {pid: 1002}
       executable: {path: /usr/bin/app2}
       probes:
-        - {type: LOG_PROBE, id: probe2, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe2, where: {method_name: main}, capture_snapshot: true}
     - process_id: {pid: 1003}
       executable: {path: /usr/bin/app3}
       probes:
-        - {type: LOG_PROBE, id: probe3, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe3, where: {method_name: main}, capture_snapshot: true}
 - !compiled {program_id: 1}
 - !processes-updated
   updated:
     - process_id: {pid: 1002}
       executable: {path: /usr/bin/app2}
       probes:
-        - {type: LOG_PROBE, id: probe2, version: 2, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe2, version: 2, where: {method_name: main}, capture_snapshot: true}
 - !loaded {program_id: 1}
 - !attached {program_id: 1, process_id: 1001} 
 - !processes-updated
@@ -28,7 +28,7 @@
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/app3}
       probes:
-        - {type: LOG_PROBE, id: probe4, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe4, where: {method_name: main}, capture_snapshot: true}
 - !detached {program_id: 1, process_id: 1001}
 - !compiled {program_id: 3}
 - !loaded {program_id: 3}
@@ -38,15 +38,15 @@ event: !processes-updated
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/app1}
       probes:
-        - {type: LOG_PROBE, id: probe1, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe1, where: {method_name: main}, capture_snapshot: true}
     - process_id: {pid: 1002}
       executable: {path: /usr/bin/app2}
       probes:
-        - {type: LOG_PROBE, id: probe2, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe2, where: {method_name: main}, capture_snapshot: true}
     - process_id: {pid: 1003}
       executable: {path: /usr/bin/app3}
       probes:
-        - {type: LOG_PROBE, id: probe3, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe3, where: {method_name: main}, capture_snapshot: true}
 effects:
   - !spawn-ebpf-compilation {executable: /usr/bin/app1@0.0m0.0, probes: [probe1], program_id: 1}
 state:
@@ -81,7 +81,7 @@ event: !processes-updated
     - process_id: {pid: 1002}
       executable: {path: /usr/bin/app2}
       probes:
-        - {type: LOG_PROBE, id: probe2, version: 2, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe2, version: 2, where: {method_name: main}, capture_snapshot: true}
 state:
   currently_compiling: "1"
   queued_programs: '[2 3] -> [3 4]'
@@ -130,7 +130,7 @@ event: !processes-updated
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/app3}
       probes:
-        - {type: LOG_PROBE, id: probe4, where: {method_name: main}}
+        - {type: LOG_PROBE, id: probe4, where: {method_name: main}, capture_snapshot: true}
 effects:
   - !detach-from-process {process_id: 1001, program_id: 1}
 state:
