--- a/pkg/dyninst/actuator/testdata/snapshot/process_update_changes_probes.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/process_update_changes_probes.yaml
@@ -5,7 +5,7 @@
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/test}
       probes:
-        - {type: LOG_PROBE, id: probe1, where: {method_name: oldFunc}}
+        - {type: LOG_PROBE, id: probe1, where: {method_name: oldFunc}, capture_snapshot: true}
 - !compiled {program_id: 1}
 - !loaded {program_id: 1}
 - !attached {program_id: 1, process_id: 1001}
@@ -14,7 +14,7 @@
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/test}
       probes:
-        - {type: LOG_PROBE, id: probe2, where: {method_name: newFunc}}
+        - {type: LOG_PROBE, id: probe2, where: {method_name: newFunc}, capture_snapshot: true}
 - !detached {program_id: 1, process_id: 1001}
 - !compiled {program_id: 2}
 - !loaded {program_id: 2}
@@ -25,7 +25,7 @@ event: !processes-updated
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/test}
       probes:
-        - {type: LOG_PROBE, id: probe1, where: {method_name: oldFunc}}
+        - {type: LOG_PROBE, id: probe1, where: {method_name: oldFunc}, capture_snapshot: true}
 effects:
   - !spawn-ebpf-compilation {executable: /usr/bin/test@0.0m0.0, probes: [probe1], program_id: 1}
 state:
@@ -73,7 +73,7 @@ event: !processes-updated
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/test}
       probes:
-        - {type: LOG_PROBE, id: probe2, where: {method_name: newFunc}}
+        - {type: LOG_PROBE, id: probe2, where: {method_name: newFunc}, capture_snapshot: true}
 effects:
   - !detach-from-process {process_id: 1001, program_id: 1}
 state:
