--- a/pkg/dyninst/testprogs/testdata/probes/sample.yaml
+++ b/pkg/dyninst/testprogs/testdata/probes/sample.yaml
@@ -4,251 +4,314 @@ probes:
   type: LOG_PROBE
   where:
     method_name: main.testSingleByte
+  capture_snapshot: true
 - id: testSingleRune
   type: LOG_PROBE
   where:
     method_name: main.testSingleRune
+  capture_snapshot: true
 - id: testSingleBool
   type: LOG_PROBE
   where:
     method_name: main.testSingleBool
+  capture_snapshot: true
 - id: testSingleInt
   type: LOG_PROBE
   where:
     method_name: main.testSingleInt
+  capture_snapshot: true
 - id: testSingleInt8
   type: LOG_PROBE
   where:
     method_name: main.testSingleInt8
+  capture_snapshot: true
 - id: testSingleInt16
   type: LOG_PROBE
   where:
     method_name: main.testSingleInt16
+  capture_snapshot: true
 - id: testSingleInt32
   type: LOG_PROBE
   where:
     method_name: main.testSingleInt32
+  capture_snapshot: true
 - id: testSingleInt64
   type: LOG_PROBE
+  capture_snapshot: true
   where:
     method_name: main.testSingleInt64
 - id: testSingleUint
   type: LOG_PROBE
   where:
     method_name: main.testSingleUint
+  capture_snapshot: true
 - id: testSingleUint8
   type: LOG_PROBE
   where:
     method_name: main.testSingleUint8
+  capture_snapshot: true
 - id: testSingleUint16
   type: LOG_PROBE
   where:
     method_name: main.testSingleUint16
+  capture_snapshot: true
 - id: testSingleUint32
   type: LOG_PROBE
   where:
     method_name: main.testSingleUint32
+  capture_snapshot: true
 - id: testSingleUint64
   type: LOG_PROBE
   where:
     method_name: main.testSingleUint64
+  capture_snapshot: true
 - id: testSingleFloat32
   type: LOG_PROBE
   where:
     method_name: main.testSingleFloat32
+  capture_snapshot: true
 - id: testSingleFloat64
   type: LOG_PROBE
   where:
     method_name: main.testSingleFloat64
+  capture_snapshot: true
 - id: testTypeAlias
   type: LOG_PROBE
   where:
     method_name: main.testTypeAlias
+  capture_snapshot: true
 - id: testSingleString
   type: LOG_PROBE
   where:
     method_name: main.testSingleString
+  capture_snapshot: true
 - id: testThreeStrings
   type: LOG_PROBE
   where:
     method_name: main.testThreeStrings
+  capture_snapshot: true
 - id: testThreeStringsInStruct
   type: LOG_PROBE
   where:
     method_name: main.testThreeStringsInStruct
+  capture_snapshot: true
 - id: testThreeStringsInStructPointer
   type: LOG_PROBE
   where:
     method_name: main.testThreeStringsInStructPointer
+  capture_snapshot: true
 - id: testOneStringInStructPointer
   type: LOG_PROBE
   where:
     method_name: main.testOneStringInStructPointer
+  capture_snapshot: true
 - id: testByteArray
   type: LOG_PROBE
   where:
     method_name: main.testByteArray
+  capture_snapshot: true
 - id: testRuneArray
   type: LOG_PROBE
   where:
     method_name: main.testRuneArray
+  capture_snapshot: true
 - id: testStringArray
   type: LOG_PROBE
   where:
     method_name: main.testStringArray
+  capture_snapshot: true
 - id: testBoolArray
   type: LOG_PROBE
   where:
     method_name: main.testBoolArray
+  capture_snapshot: true
 - id: testIntArray
   type: LOG_PROBE
   where:
     method_name: main.testIntArray
+  capture_snapshot: true
 - id: testInt8Array
   type: LOG_PROBE
   where:
     method_name: main.testInt8Array
+  capture_snapshot: true
 - id: testInt16Array
   type: LOG_PROBE
   where:
     method_name: main.testInt16Array
+  capture_snapshot: true
 - id: testInt32Array
   type: LOG_PROBE
   where:
     method_name: main.testInt32Array
+  capture_snapshot: true
 - id: testInt64Array
   type: LOG_PROBE
   where:
     method_name: main.testInt64Array
+  capture_snapshot: true
 - id: testUintArray
   type: LOG_PROBE
   where:
     method_name: main.testUintArray
+  capture_snapshot: true
 - id: testUint8Array
   type: LOG_PROBE
   where:
     method_name: main.testUint8Array
+  capture_snapshot: true
 - id: testUint16Array
   type: LOG_PROBE
   where:
     method_name: main.testUint16Array
+  capture_snapshot: true
 - id: testUint32Array
   type: LOG_PROBE
   where:
     method_name: main.testUint32Array
+  capture_snapshot: true
 - id: testUint64Array
   type: LOG_PROBE
   where:
     method_name: main.testUint64Array
+  capture_snapshot: true
 - id: testArrayOfArrays
   type: LOG_PROBE
   where:
     method_name: main.testArrayOfArrays
+  capture_snapshot: true
 - id: testArrayOfStrings
   type: LOG_PROBE
   where:
     method_name: main.testArrayOfStrings
+  capture_snapshot: true
 - id: testArrayOfArraysOfArrays
   type: LOG_PROBE
   where:
     method_name: main.testArrayOfArraysOfArrays
+  capture_snapshot: true
 - id: testArrayOfStructs
   type: LOG_PROBE
   where:
     method_name: main.testArrayOfStructs
+  capture_snapshot: true
 - id: testUintSlice
   type: LOG_PROBE
   where:
     method_name: main.testUintSlice
+  capture_snapshot: true
 - id: testEmptySlice
   type: LOG_PROBE
   where:
     method_name: main.testEmptySlice
+  capture_snapshot: true
 - id: testSliceOfSlices
   type: LOG_PROBE
   where:
     method_name: main.testSliceOfSlices
+  capture_snapshot: true
 - id: testStructSlice
   type: LOG_PROBE
   where:
     method_name: main.testStructSlice
+  capture_snapshot: true
 - id: testEmptySliceOfStructs
   type: LOG_PROBE
   where:
     method_name: main.testEmptySliceOfStructs
+  capture_snapshot: true
 - id: testNilSliceOfStructs
   type: LOG_PROBE
   where:
     method_name: main.testNilSliceOfStructs
+  capture_snapshot: true
 - id: testStringSlice
   type: LOG_PROBE
   where:
     method_name: main.testStringSlice
+  capture_snapshot: true
 - id: testNilSliceWithOtherParams
   type: LOG_PROBE
   where:
     method_name: main.testNilSliceWithOtherParams
+  capture_snapshot: true
 - id: testNilSlice
   type: LOG_PROBE
   where:
     method_name: main.testNilSlice
+  capture_snapshot: true
 - id: testStruct
   type: LOG_PROBE
   where:
     method_name: main.testStruct
+  capture_snapshot: true
 - id: testEmptyStruct
   type: LOG_PROBE
   where:
     method_name: main.testEmptyStruct
+  capture_snapshot: true
 - id: testUintPointer
   type: LOG_PROBE
   where:
     method_name: main.testUintPointer
+  capture_snapshot: true
 - id: testStringPointer
   type: LOG_PROBE
   where:
     method_name: main.testStringPointer
+  capture_snapshot: true
 - id: testNilPointer
   type: LOG_PROBE
   where:
     method_name: main.testNilPointer
+  capture_snapshot: true
 - id: testCombinedByte
   type: LOG_PROBE
   where:
     method_name: main.testCombinedByte
+  capture_snapshot: true
 - id: testMultipleSimpleParams
   type: LOG_PROBE
   where:
     method_name: main.testMultipleSimpleParams
+  capture_snapshot: true
 - id: testMapStringToInt
   type: LOG_PROBE
   where:
     method_name: main.testMapStringToInt
+  capture_snapshot: true
 - id: testInterface
   type: LOG_PROBE
   where:
     method_name: main.testInterface
+  capture_snapshot: true
 - id: testError
   type: LOG_PROBE
   where:
     method_name: main.testError
+  capture_snapshot: true
 - id: testBigStruct
   type: LOG_PROBE
   where:
     method_name: main.testBigStruct
+  capture_snapshot: true
 - id: stackC
   type: LOG_PROBE
   where:
     method_name: main.stackC
+  capture_snapshot: true
 - id: testChannel
   type: LOG_PROBE
   where:
     method_name: main.testChannel
+  capture_snapshot: true
 - id: testLinkedList
   type: LOG_PROBE
   where:
     method_name: main.testLinkedList
+  capture_snapshot: true
 - id: testPointerLoop
   type: LOG_PROBE
   where:
     method_name: main.testPointerLoop
+  capture_snapshot: true
