--- a/pkg/dyninst/testprogs/testdata/probes/simple.yaml
+++ b/pkg/dyninst/testprogs/testdata/probes/simple.yaml
@@ -2,46 +2,60 @@ binary: simple
 probes:
 - id: intArg
   type: LOG_PROBE
+  capture_snapshot: true
   where:
     method_name: main.intArg
 - id: stringArg
   type: LOG_PROBE
+  capture_snapshot: true
   where:
     method_name: main.stringArg
 - id: intSliceArg
   type: LOG_PROBE
+  capture_snapshot: true
   where:
     method_name: main.intSliceArg
 - id: intArrayArg
   type: LOG_PROBE
+  capture_snapshot: true
   where:
     method_name: main.intArrayArg
 - id: stringSliceArg
   type: LOG_PROBE
+  capture_snapshot: true
   where:
     method_name: main.stringSliceArg
 - id: stringArrayArg
   type: LOG_PROBE
+  capture_snapshot: true
   where:
     method_name: main.stringArrayArg
 - id: intArrayArgFrameless
   type: LOG_PROBE
+  capture_snapshot: true
   where:
     method_name: main.stringArrayArgFrameless
 - id: inlined
   type: LOG_PROBE
+  capture_snapshot: true
+  sampling:
+    # Gets called twice, so we should get 2 snapshots.
+    snapshots_per_second: 2
   where:
     method_name: main.inlined
 - id: mapArg
   type: LOG_PROBE
+  capture_snapshot: true
   where:
     method_name: main.mapArg
 - id: bigMapArg
   type: LOG_PROBE
+  capture_snapshot: true
   where:
     method_name: main.bigMapArg
 - id: PointerChainArg
   type: LOG_PROBE
+  capture_snapshot: true
   where:
     method_name: main.PointerChainArg
   capture:
