--- a/.gitlab/deploy_cws_instrumentation/deploy_cws_instrumentation.yml
+++ b/.gitlab/deploy_cws_instrumentation/deploy_cws_instrumentation.yml
@@ -1,7 +1,4 @@
 ---
-include:
-  - .gitlab/common/container_publish_job_templates.yml
-
 #
 # CWS Instrumentation image tagging & manifest publication
 #
@@ -9,15 +6,10 @@ include:
 .deploy_containers-cws-instrumentation-base:
   extends: .docker_publish_job_definition
   stage: deploy_cws_instrumentation
-  needs:
-    - job: "docker_build_cws_instrumentation_amd64"
-      artifacts: false
-    - job: "docker_build_cws_instrumentation_arm64"
-      artifacts: false
   before_script:
-    - if [[ "$VERSION" == "" ]]; then VERSION="$(dda inv agent.version --url-safe)" || exit $?; fi
+    - if [[ "$VERSION" == "" ]]; then VERSION="$(dda inv agent.version --url-safe --pipeline-id $PARENT_PIPELINE_ID)" || exit $?; fi
     - if [[ "$CWS_INSTRUMENTATION_REPOSITORY" == "" ]]; then export CWS_INSTRUMENTATION_REPOSITORY="cws-instrumentation"; fi
-    - export IMG_BASE_SRC="${SRC_CWS_INSTRUMENTATION}:v${CI_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}"
+    - export IMG_BASE_SRC="${SRC_CWS_INSTRUMENTATION}:v${PARENT_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}"
     - export IMG_SOURCES="${IMG_BASE_SRC}-amd64,${IMG_BASE_SRC}-arm64"
     - export IMG_DESTINATIONS="${CWS_INSTRUMENTATION_REPOSITORY}:${VERSION}"
 
