Revert "Pre-build binaries for e2e tests (#38083)"
This reverts commit 64229712c2aab87b56b1357ccd1acb369aa206fd.

--- a/.gitlab/source_test/linux.yml
+++ b/.gitlab/source_test/linux.yml
@@ -185,7 +185,7 @@ new-e2e-unit-tests:
   image: registry.ddbuild.io/ci/test-infra-definitions/runner$TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX:$TEST_INFRA_DEFINITIONS_BUILDIMAGES
   tags: ["arch:amd64"]
   needs:
-    - go_e2e_deps
+    - !reference [ .needs_new_e2e_template ]
     - go_deps
     - go_tools_deps
   before_script:
