dyninst/rcjson: use "internal" camelCase
Prior to this change, we were using the "external" json API which uses
snake_case. This change adops the "internal" API as used in the remote config
documents. These use camelCase.

--- a/pkg/dyninst/actuator/testdata/snapshot/aborted_program_cleanup_with_queue.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/aborted_program_cleanup_with_queue.yaml
@@ -6,11 +6,11 @@
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/app1}
       probes:
-        - {type: LOG_PROBE, id: probe1, where: {method_name: main}, capture_snapshot: true}
+        - {type: LOG_PROBE, id: probe1, where: {methodName: main}, captureSnapshot: true}
     - process_id: {pid: 1002}
       executable: {path: /usr/bin/app2}
       probes:
-        - {type: LOG_PROBE, id: probe2, where: {method_name: main}, capture_snapshot: true}
+        - {type: LOG_PROBE, id: probe2, where: {methodName: main}, captureSnapshot: true}
 - !processes-updated {removed: [1001]}
 - !compiled {program_id: 1}
 - !compiled {program_id: 2} 
@@ -20,11 +20,11 @@ event: !processes-updated
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/app1}
       probes:
-        - {type: LOG_PROBE, id: probe1, where: {method_name: main}, capture_snapshot: true}
+        - {type: LOG_PROBE, id: probe1, where: {methodName: main}, captureSnapshot: true}
     - process_id: {pid: 1002}
       executable: {path: /usr/bin/app2}
       probes:
-        - {type: LOG_PROBE, id: probe2, where: {method_name: main}, capture_snapshot: true}
+        - {type: LOG_PROBE, id: probe2, where: {methodName: main}, captureSnapshot: true}
 effects:
   - !spawn-ebpf-compilation {executable: /usr/bin/app1@0.0m0.0, probes: [probe1], program_id: 1}
 state:
