--- a/pkg/dyninst/actuator/testdata/snapshot/process_removed_during_compilation.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/process_removed_during_compilation.yaml
@@ -5,7 +5,7 @@
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/test}
       probes:
-        - {type: LOG_PROBE, id: probe1, where: {method_name: main}, capture_snapshot: true}
+        - {type: LOG_PROBE, id: probe1, where: {methodName: main}, captureSnapshot: true}
 - !processes-updated {removed: [1001]}
 - !compiled {program_id: 1} 
 ---
@@ -14,7 +14,7 @@ event: !processes-updated
     - process_id: {pid: 1001}
       executable: {path: /usr/bin/test}
       probes:
-        - {type: LOG_PROBE, id: probe1, where: {method_name: main}, capture_snapshot: true}
+        - {type: LOG_PROBE, id: probe1, where: {methodName: main}, captureSnapshot: true}
 effects:
   - !spawn-ebpf-compilation {executable: /usr/bin/test@0.0m0.0, probes: [probe1], program_id: 1}
 state:
