--- a/pkg/dyninst/testprogs/testdata/probes/sample.yaml
+++ b/pkg/dyninst/testprogs/testdata/probes/sample.yaml
@@ -3,315 +3,315 @@ probes:
 - id: testSingleByte
   type: LOG_PROBE
   where:
-    method_name: main.testSingleByte
-  capture_snapshot: true
+    methodName: main.testSingleByte
+  captureSnapshot: true
 - id: testSingleRune
   type: LOG_PROBE
   where:
-    method_name: main.testSingleRune
-  capture_snapshot: true
+    methodName: main.testSingleRune
+  captureSnapshot: true
 - id: testSingleBool
   type: LOG_PROBE
   where:
-    method_name: main.testSingleBool
-  capture_snapshot: true
+    methodName: main.testSingleBool
+  captureSnapshot: true
 - id: testSingleInt
   type: LOG_PROBE
   where:
-    method_name: main.testSingleInt
-  capture_snapshot: true
+    methodName: main.testSingleInt
+  captureSnapshot: true
 - id: testSingleInt8
   type: LOG_PROBE
   where:
-    method_name: main.testSingleInt8
-  capture_snapshot: true
+    methodName: main.testSingleInt8
+  captureSnapshot: true
 - id: testSingleInt16
   type: LOG_PROBE
   where:
-    method_name: main.testSingleInt16
-  capture_snapshot: true
+    methodName: main.testSingleInt16
+  captureSnapshot: true
 - id: testSingleInt32
   type: LOG_PROBE
   where:
-    method_name: main.testSingleInt32
-  capture_snapshot: true
+    methodName: main.testSingleInt32
+  captureSnapshot: true
 - id: testSingleInt64
   type: LOG_PROBE
-  capture_snapshot: true
   where:
-    method_name: main.testSingleInt64
+    methodName: main.testSingleInt64
+  captureSnapshot: true
 - id: testSingleUint
   type: LOG_PROBE
   where:
-    method_name: main.testSingleUint
-  capture_snapshot: true
+    methodName: main.testSingleUint
+  captureSnapshot: true
 - id: testSingleUint8
   type: LOG_PROBE
   where:
-    method_name: main.testSingleUint8
-  capture_snapshot: true
+    methodName: main.testSingleUint8
+  captureSnapshot: true
 - id: testSingleUint16
   type: LOG_PROBE
   where:
-    method_name: main.testSingleUint16
-  capture_snapshot: true
+    methodName: main.testSingleUint16
+  captureSnapshot: true
 - id: testSingleUint32
   type: LOG_PROBE
   where:
-    method_name: main.testSingleUint32
-  capture_snapshot: true
+    methodName: main.testSingleUint32
+  captureSnapshot: true
 - id: testSingleUint64
   type: LOG_PROBE
   where:
-    method_name: main.testSingleUint64
-  capture_snapshot: true
+    methodName: main.testSingleUint64
+  captureSnapshot: true
 - id: testSingleFloat32
   type: LOG_PROBE
   where:
-    method_name: main.testSingleFloat32
-  capture_snapshot: true
+    methodName: main.testSingleFloat32
+  captureSnapshot: true
 - id: testSingleFloat64
   type: LOG_PROBE
   where:
-    method_name: main.testSingleFloat64
-  capture_snapshot: true
+    methodName: main.testSingleFloat64
+  captureSnapshot: true
 - id: testTypeAlias
   type: LOG_PROBE
   where:
-    method_name: main.testTypeAlias
-  capture_snapshot: true
+    methodName: main.testTypeAlias
+  captureSnapshot: true
 - id: testSingleString
   type: LOG_PROBE
   where:
-    method_name: main.testSingleString
-  capture_snapshot: true
+    methodName: main.testSingleString
+  captureSnapshot: true
 - id: testThreeStrings
   type: LOG_PROBE
   where:
-    method_name: main.testThreeStrings
-  capture_snapshot: true
+    methodName: main.testThreeStrings
+  captureSnapshot: true
 - id: testThreeStringsInStruct
   type: LOG_PROBE
   where:
-    method_name: main.testThreeStringsInStruct
-  capture_snapshot: true
+    methodName: main.testThreeStringsInStruct
+  captureSnapshot: true
 - id: testThreeStringsInStructPointer
   type: LOG_PROBE
   where:
-    method_name: main.testThreeStringsInStructPointer
-  capture_snapshot: true
+    methodName: main.testThreeStringsInStructPointer
+  captureSnapshot: true
 - id: testOneStringInStructPointer
   type: LOG_PROBE
   where:
-    method_name: main.testOneStringInStructPointer
-  capture_snapshot: true
+    methodName: main.testOneStringInStructPointer
+  captureSnapshot: true
 - id: testByteArray
   type: LOG_PROBE
   where:
-    method_name: main.testByteArray
-  capture_snapshot: true
+    methodName: main.testByteArray
+  captureSnapshot: true
 - id: testRuneArray
   type: LOG_PROBE
   where:
-    method_name: main.testRuneArray
-  capture_snapshot: true
+    methodName: main.testRuneArray
+  captureSnapshot: true
 - id: testStringArray
   type: LOG_PROBE
   where:
-    method_name: main.testStringArray
-  capture_snapshot: true
+    methodName: main.testStringArray
+  captureSnapshot: true
 - id: testBoolArray
   type: LOG_PROBE
   where:
-    method_name: main.testBoolArray
-  capture_snapshot: true
+    methodName: main.testBoolArray
+  captureSnapshot: true
 - id: testIntArray
   type: LOG_PROBE
   where:
-    method_name: main.testIntArray
-  capture_snapshot: true
+    methodName: main.testIntArray
+  captureSnapshot: true
 - id: testInt8Array
   type: LOG_PROBE
   where:
-    method_name: main.testInt8Array
-  capture_snapshot: true
+    methodName: main.testInt8Array
+  captureSnapshot: true
 - id: testInt16Array
   type: LOG_PROBE
   where:
-    method_name: main.testInt16Array
-  capture_snapshot: true
+    methodName: main.testInt16Array
+  captureSnapshot: true
 - id: testInt32Array
   type: LOG_PROBE
   where:
-    method_name: main.testInt32Array
-  capture_snapshot: true
+    methodName: main.testInt32Array
+  captureSnapshot: true
 - id: testInt64Array
   type: LOG_PROBE
   where:
-    method_name: main.testInt64Array
-  capture_snapshot: true
+    methodName: main.testInt64Array
+  captureSnapshot: true
 - id: testUintArray
   type: LOG_PROBE
   where:
-    method_name: main.testUintArray
-  capture_snapshot: true
+    methodName: main.testUintArray
+  captureSnapshot: true
 - id: testUint8Array
   type: LOG_PROBE
   where:
-    method_name: main.testUint8Array
-  capture_snapshot: true
+    methodName: main.testUint8Array
+  captureSnapshot: true
 - id: testUint16Array
   type: LOG_PROBE
   where:
-    method_name: main.testUint16Array
-  capture_snapshot: true
+    methodName: main.testUint16Array
+  captureSnapshot: true
 - id: testUint32Array
   type: LOG_PROBE
   where:
-    method_name: main.testUint32Array
-  capture_snapshot: true
+    methodName: main.testUint32Array
+  captureSnapshot: true
 - id: testUint64Array
   type: LOG_PROBE
   where:
-    method_name: main.testUint64Array
-  capture_snapshot: true
+    methodName: main.testUint64Array
+  captureSnapshot: true
 - id: testArrayOfArrays
   type: LOG_PROBE
   where:
-    method_name: main.testArrayOfArrays
-  capture_snapshot: true
+    methodName: main.testArrayOfArrays
+  captureSnapshot: true
 - id: testArrayOfStrings
   type: LOG_PROBE
   where:
-    method_name: main.testArrayOfStrings
-  capture_snapshot: true
+    methodName: main.testArrayOfStrings
+  captureSnapshot: true
 - id: testArrayOfArraysOfArrays
   type: LOG_PROBE
   where:
-    method_name: main.testArrayOfArraysOfArrays
-  capture_snapshot: true
+    methodName: main.testArrayOfArraysOfArrays
+  captureSnapshot: true
 - id: testArrayOfStructs
   type: LOG_PROBE
   where:
-    method_name: main.testArrayOfStructs
-  capture_snapshot: true
+    methodName: main.testArrayOfStructs
+  captureSnapshot: true
 - id: testUintSlice
   type: LOG_PROBE
   where:
-    method_name: main.testUintSlice
-  capture_snapshot: true
+    methodName: main.testUintSlice
+  captureSnapshot: true
 - id: testEmptySlice
   type: LOG_PROBE
   where:
-    method_name: main.testEmptySlice
-  capture_snapshot: true
+    methodName: main.testEmptySlice
+  captureSnapshot: true
 - id: testSliceOfSlices
   type: LOG_PROBE
   where:
-    method_name: main.testSliceOfSlices
-  capture_snapshot: true
+    methodName: main.testSliceOfSlices
+  captureSnapshot: true
 - id: testStructSlice
   type: LOG_PROBE
   where:
-    method_name: main.testStructSlice
-  capture_snapshot: true
+    methodName: main.testStructSlice
+  captureSnapshot: true
 - id: testEmptySliceOfStructs
   type: LOG_PROBE
   where:
-    method_name: main.testEmptySliceOfStructs
-  capture_snapshot: true
+    methodName: main.testEmptySliceOfStructs
+  captureSnapshot: true
 - id: testNilSliceOfStructs
   type: LOG_PROBE
   where:
-    method_name: main.testNilSliceOfStructs
-  capture_snapshot: true
+    methodName: main.testNilSliceOfStructs
+  captureSnapshot: true
 - id: testStringSlice
   type: LOG_PROBE
   where:
-    method_name: main.testStringSlice
-  capture_snapshot: true
+    methodName: main.testStringSlice
+  captureSnapshot: true
 - id: testNilSliceWithOtherParams
   type: LOG_PROBE
   where:
-    method_name: main.testNilSliceWithOtherParams
-  capture_snapshot: true
+    methodName: main.testNilSliceWithOtherParams
+  captureSnapshot: true
 - id: testNilSlice
   type: LOG_PROBE
   where:
-    method_name: main.testNilSlice
-  capture_snapshot: true
+    methodName: main.testNilSlice
+  captureSnapshot: true
 - id: testStruct
   type: LOG_PROBE
   where:
-    method_name: main.testStruct
-  capture_snapshot: true
+    methodName: main.testStruct
+  captureSnapshot: true
 - id: testEmptyStruct
   type: LOG_PROBE
   where:
-    method_name: main.testEmptyStruct
-  capture_snapshot: true
+    methodName: main.testEmptyStruct
+  captureSnapshot: true
 - id: testUintPointer
   type: LOG_PROBE
   where:
-    method_name: main.testUintPointer
-  capture_snapshot: true
+    methodName: main.testUintPointer
+  captureSnapshot: true
 - id: testStringPointer
   type: LOG_PROBE
   where:
-    method_name: main.testStringPointer
-  capture_snapshot: true
+    methodName: main.testStringPointer
+  captureSnapshot: true
 - id: testNilPointer
   type: LOG_PROBE
   where:
-    method_name: main.testNilPointer
-  capture_snapshot: true
+    methodName: main.testNilPointer
+  captureSnapshot: true
 - id: testCombinedByte
   type: LOG_PROBE
   where:
-    method_name: main.testCombinedByte
-  capture_snapshot: true
+    methodName: main.testCombinedByte
+  captureSnapshot: true
 - id: testMultipleSimpleParams
   type: LOG_PROBE
   where:
-    method_name: main.testMultipleSimpleParams
-  capture_snapshot: true
+    methodName: main.testMultipleSimpleParams
+  captureSnapshot: true
 - id: testMapStringToInt
   type: LOG_PROBE
   where:
-    method_name: main.testMapStringToInt
-  capture_snapshot: true
+    methodName: main.testMapStringToInt
+  captureSnapshot: true
 - id: testInterface
   type: LOG_PROBE
   where:
-    method_name: main.testInterface
-  capture_snapshot: true
+    methodName: main.testInterface
+  captureSnapshot: true
 - id: testError
   type: LOG_PROBE
   where:
-    method_name: main.testError
-  capture_snapshot: true
+    methodName: main.testError
+  captureSnapshot: true
 - id: testBigStruct
   type: LOG_PROBE
   where:
-    method_name: main.testBigStruct
-  capture_snapshot: true
+    methodName: main.testBigStruct
+  captureSnapshot: true
 - id: stackC
   type: LOG_PROBE
   where:
-    method_name: main.stackC
-  capture_snapshot: true
+    methodName: main.stackC
+  captureSnapshot: true
 - id: testChannel
   type: LOG_PROBE
   where:
-    method_name: main.testChannel
-  capture_snapshot: true
+    methodName: main.testChannel
+  captureSnapshot: true
 - id: testLinkedList
   type: LOG_PROBE
   where:
-    method_name: main.testLinkedList
-  capture_snapshot: true
+    methodName: main.testLinkedList
+  captureSnapshot: true
 - id: testPointerLoop
   type: LOG_PROBE
   where:
-    method_name: main.testPointerLoop
-  capture_snapshot: true
+    methodName: main.testPointerLoop
+  captureSnapshot: true
